@@ -1,1 +1,3 @@
 Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
+Philippe C.D. Robert <probert@siggraph.org>
+
