@@ -1,3 +1,9 @@
+2003-07-05  Philippe C.D. Robert <probert@siggraph.org>
+
+        * Replacing all #import directives with #include directives
+        * Changing main menu title to EasyDiff
+        * Updating Gorm files
+
 2002-06-23  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
 	* fix for patch creation. (patch from right to left would not work)
